# Athena

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE_REPORT_RC1.md  RETRIEVAL_V1_FREEZE.md  ROADMAP.md  audit_results.json  docker-compose.yml  phase14_math_audit.json  pyproject.toml  requirements-dev.txt  requirements.txt  ruff_errors.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
backend/: __init__.py
backend/analytics/: __init__.py
backend/api/: __init__.py
backend/collective/: __init__.py  bottlenecks.py  engine.py  fragility.py  identity.py  structure.py
backend/etl/: __init__.py  normalize.py  pipeline.py
backend/explanation/: __init__.py  builder.py  context.py  conversation.py  engine.py  intent.py  parsers.py  prompt_builder.py  response.py  telemetry.py  validator.py
backend/ingestion/: __init__.py  load_data.py  manifest.py  validator.py
backend/intelligence/: __init__.py  adapter.py  archetypes.py  build_store.py  capabilities.py  career.py  counterfactual.py  decision.py  engine.py  normalization.py  player.py  roles.py  season.py  signals.py  store.py  team.py
backend/knowledge/: builder.py  query.py  registry.py
backend/reasoning/: projector.py  qualifiers.py
backend/recommendation/: __init__.py  comparison.py  engine.py  matching.py  recruitment.py  tradeoffs.py
backend/retrieval/: bridge.py  context.py  coverage.py  debug.py  execution.py  resolver.py  shadow.py  strategies.py
backend/utils/: logger.py
backend/warehouse/: __init__.py  connection.py  queries.py  warehouse.py
data/sample/: README.md
docs/: 00_PRODUCT_VISION.md  01_PRD.md  02_INTELLIGENCE_MODEL.md  03_TECH_SPEC.md  04_DATA_ARCHITECTURE.md  05_PRODUCT_EXPERIENCE_AND_ENGINEERING_GUIDE.md  AGENTS.md  ARCHITECTURE_DECISIONS.md  DECISION_WORKFLOWS.md  DEPLOYMENT.md  FOOTBALL_INTELLIGENCE_ENGINE.md  IMPLEMENTATION_TASKS.md  RETRIEVAL_CAPABILITY_MATRIX.md  WAREHOUSE.md  application_flow.md  architecture.md  explanation_pipeline.md  intelligence_pipeline.md
docs/adr/: ADR-006-retrieval-evidence-before-ai.md  ADR-007-claims-as-retrieval-boundary.md  ADR-008-retrieval-no-football-reasoning.md  ADR-009-registry-based-extension.md  ADR-010-coverage-validation-before-prompt.md  ADR-011-retrieval-v1-freeze.md
frontend/: __init__.py  app.py  layout.py  session.py  sidebar.py  state.py  theme.py
frontend/components/: __init__.py  ask_athena.py  evidence_inspector.py  selectors.py  states.py
frontend/data/: athena_service.py  dashboard.py  player_service.py  players.py  recruitment.py  recruitment_service.py  retrieval_service.py  team_service.py  teams.py
frontend/pages/: dashboard.py  player_intelligence.py  team_intelligence.py  (+1 more)
scratch/: audit_deps_fast.py  audit_deps_simple.py  check_matches.py  test_date.py  test_minutes.py  validate_hierarchy.py
scripts/: audit_phase14.py  bootstrap.py  build_warehouse.py  generate_validation_snapshot.py  regenerate_store.py  run_retrieval_ci.py  test_model_selection.py  validate_hierarchy.py
shared/: __init__.py  constants.py  models.py  schemas.py
tests/: test_constants.py  test_etl.py  test_ingestion.py  test_ingestion_integration.py  test_performance.py  test_regressions_phase15.py  test_regressions_phase16.py  test_schemas.py  test_warehouse.py
(+50 files in other folders)
