[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

# ─────────────────────────────────────────────────────────────────────────────
# Project metadata
# ─────────────────────────────────────────────────────────────────────────────
[project]
name = "athena"
version = "1.0.0"
description = "AI-powered Football Decision Intelligence Platform"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Bhaskar Pareek" }]
requires-python = ">=3.10"
keywords = ["football", "analytics", "ai", "decision-intelligence", "statsbomb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Repository = "https://github.com/bhaskarpareek/athena"

# ─────────────────────────────────────────────────────────────────────────────
# Setuptools — package discovery
# ─────────────────────────────────────────────────────────────────────────────
[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "frontend*", "shared*"]

# ─────────────────────────────────────────────────────────────────────────────
# Black — code formatting
# ─────────────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  | data
  | docs
  | .venv
)/
'''

# ─────────────────────────────────────────────────────────────────────────────
# Ruff — fast linting
# ─────────────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".venv",
    "data/",
    "docs/",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in default arguments
]

[tool.ruff.lint.isort]
known-first-party = ["backend", "frontend", "shared"]

# ─────────────────────────────────────────────────────────────────────────────
# Pytest
# ─────────────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "unit: fast, isolated unit tests",
    "integration: tests that require data files",
    "slow: tests that take >5 seconds",
    "performance: tests measuring performance budget/latency",
]
filterwarnings = [
    "ignore::FutureWarning",
]

# ─────────────────────────────────────────────────────────────────────────────
# Coverage
# ─────────────────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["backend", "shared"]
omit = ["tests/*", "data/*", ".venv/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
